screenshots: Fix rounded corner clipping

--- a/src/components/Screenshots.module.css
+++ b/src/components/Screenshots.module.css
@@ -10,7 +10,8 @@
 
   /* From Figma specs */
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
-  border-radius: 15px;
+  /* Empirical minimum for Pixel 4 XL rounded corner clipping */
+  border-radius: 19px;
   /* Figma reports 20px, but that doesn't work in CSS */
   margin: 15px;
 }
@@ -28,6 +29,7 @@
 
   /* From Figma specs */
   box-shadow: 0px 4px 18px 2px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  /* Empirical minimum for Pixel 4 XL rounded corner clipping */
+  border-radius: 29px;
   margin: 20px;
 }
